# dataverse-mapper

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  dot_env_example  pyproject.toml
.github/workflows/: docker-image.yml  image.yml  test.yml
src/: main.py  mapper.py  utils.py
src/schema/: exceptions.py  input.py
src/test-data/input-data/: cbs-test-metadata.json  (+9 more)
src/tests/: test_mapper.py  test_mapper_v2.py
test-data/expected-result-data/: cbs-result.json  dataverseNL-result.json  easy-result.json  liss-result.json  ssh-result.json
test-data/input-data/: cbs-test-metadata.json  dataverseNL-test-metadata.json  easy-test-metadata.json  liss-parent-metadata.json  simple-test-input-metadata.json  ssh-test-input-metadata.json
test-data/mappings/: cbs-mapping.json  dataverseNL-mapping.json  easy-mapping.json  easy_mappings.json  liss-json-mapping.json  simple-test-mapping.json  ssh-mapping.json
test-data/result-data/: 3511-result.json  cbs-result.json
test-data/template-data/: cbs_dataverse_template.json  dataverseNL-template.json  oai_easy_dans_knaw_nl_easy_dataset_3511_dataverse_json.json  object-compound-template.json  semafoutpute5jquhyzoai_easy_dans_knaw_nl_easy_dataset_3461.xml-output.json  semafoutputybtb80cqoai_easy_dans_knaw_nl_easy_dataset_3454.xml-output.json  simple-test-template.json  ssh-dataverse-template.json
test-data/test-output/: cbs-test-output.json  easy-test-output.json  liss-parent-test-output.json  liss-test-output.json
test-data/xml2json-data/: cbs-example.json  cbs-filtered.json  oai_easy_dans_knaw_nl_easy_dataset_3511.json
(+23 files in other folders)
