[tool.poetry]
name = "dataverse_mapper"
version = "1.0.1"
description = "A service that maps regular JSON data to a JSON template using the Dataverse schema."
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = "^3.9.14"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
fastapi = "^0.95.0"
pytest = "^7.1.3"
requests = "^2.28.1"
coverage = "^6.5.0"
pyDataverse = "^0.3.1"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
