[tool.poetry]
name = "dataverse_mapper"
version = "1.2.2"
description = "A service that maps regular JSON data to a JSON template using the Dataverse schema."
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = "^3.9.14"
uvicorn = "^0.24.0"
pydantic = "^2.1.0"
fastapi = "^0.104.1"
pytest = "^7.1.3"
requests = "^2.28.1"
coverage = "^7.2.0"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^23.7.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
